--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Runtime data
 pids
@@ -105,6 +106,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+config/keys.js
 
 # Typescript v1 declaration files
 typings/
