--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Social Network for Developers - Udemy Course",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start:dev\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,11 +23,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.3",
-    "npm": "^6.1.0",
+    "npm": "^6.5.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.3.0"
